--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - 3000:3000
       - 5555:5555
     environment:
+      DATABASE_URL: mysql://root:password@db:3306/SwiftSend?schema=public
       MYSQL_USER: root
       MYSQL_PASSWORD: password
       MYSQL_HOST: db
